--- a/src/main/resources/templates/question-list.html
+++ b/src/main/resources/templates/question-list.html
@@ -2,26 +2,44 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Questionnaire list</title>
+    <title>Question list</title>
     <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
 </head>
 <body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
-<table class="table table-striped table-dark col-md-10" style="margin-top: 10%; margin-left: 10%">
+<div class="row col-md-12" style="margin-top: 10%;">
+    <div class="col-md-8 text-center" >
+        <h1 class="display-4" th:text="${title}" style="color: #966364"></h1>
+    </div>
+    <div class="col-md-4">
+        <a th:href="@{'/questionnaire/remove/'+${questionnaryID}}">
+            <button type="button" class="btn delete"></button>
+        </a><a th:href="@{'/questionnaire/edit/'+${questionnaryID}}">
+        <button type="button" class="btn edit"></button>
+    </a>
+    </div>
+</div>
+<table class="table table-striped table-dark col-md-10"
+       style="margin-top:1%; margin-left: 10%; background-color: #966364">
     <thead>
     <tr>
         <th scope="col">#</th>
         <th scope="col">Question</th>
         <th scope="col">Answers</th>
         <th scope="col">Correct Answer</th>
+        <th scope="col">Options</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="question,index : ${questions}">
-        <th scope="row" th:text="${index.index}"></th>
+        <th scope="row" th:text="1+${index.index}"></th>
         <td th:text="${question.getContent()}"></td>
-        <td th:text="${question.getPossibleAnswers()}"></td>
+        <td th:text="${question.getAllAnswers()}"></td>
         <td th:text="${question.getCorrectAnswers()}"></td>
+        <td>
+            <a th:href="@{'/question/delete/'+${question.getId()}}" class="btn btn-del" role="button"></a>
+            <a th:href="@{'/question/showStats/'+${question.getId()}}" class="btn btn-stats" role="button"></a>
+        </td>
     </tbody>
 </table>
 <div class="row col-md-12 justify-content-center">
@@ -29,7 +47,7 @@
         <ul class="pagination">
             <li class="page-item" th:if="${questions.getNumber() >0}">
                 <a class="page-link"
-                   th:href="@{/author/list(page=${questions.getNumber()-1}, size=${questions.getSize()})}"
+                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()-1}, size=${questions.getSize()})}"
                    aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
@@ -38,30 +56,30 @@
             <li class="page-item"
                 th:each="number : ${#numbers.sequence(questions.getNumber()-3, questions.getNumber()-1)}"
                 th:if="${number >=0}">
-                <a class="page-link" th:href="@{/author/list(page=${number}, size=${questions.getSize()})}"
+                <a class="page-link"
+                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"
                    th:text="${number + 1}"></a>
             </li>
             <li class="page-item"
                 th:each="number : ${#numbers.sequence(questions.getNumber(), questions.getNumber()+3)}"
                 th:if="${number< questions.getTotalPages()}">
-                <a class="page-link" th:href="@{/author/list(page=${number}, size=${questions.getSize()})}"
+                <a class="page-link"
+                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"
                    th:text="${number + 1}"></a>
             </li>
             <li class="page-item" th:if="${questions.getNumber() < questions.getTotalPages()-1}">
                 <a class="page-link"
-                   th:href="@{/author/list(page=${questions.getNumber()+1}, size=${questions.getSize()})}">Next</a>
+                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()+1}, size=${questions.getSize()})}">Next</a>
             </li>
         </ul>
     </nav>
 </div>
-<div class="row" style="margin-top: 22%; margin-left: 75%">
+<div class="row" style="margin-left: 75%; margin-bottom: 10%;">
     <a th:href="@{'/question/add/'+${questionnaryID}}">
         <button type="button" class="btn addQuestion"></button>
     </a>
-</div>
-<div class="row" style="margin-left: 75%">
-    <a th:href="@{${referer}}">
-        <button type="button" class="btn back"></button>
+    <a th:href="@{/questionnaire/list}">
+        <button type="button" class="btn continue"></button>
     </a>
 </div>
 
