--- a/src/main/resources/templates/start-filling-form.html
+++ b/src/main/resources/templates/start-filling-form.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Registration form</title>
+    <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
 </head>
-<body>
-$END$
+<body class="bg text-center">
+<div class="row col-md-2" style="margin-top: 150px; margin-left: 42%">
+    <th:block th:replace="fragments :: navigator" th:remove="tag"/>
+    <img th:src="@{/image/logo.png}" class="img-fluid rounded">
+</div>
+<div class="row">
+    <h1 class="display-4" th:text="${questionnaire.getTitle()}" style="color: #966364; margin: 0 auto"></h1>
+</div>
+</center>
+<form id="form" th:action="@{/public/fill}" method="post" th:object="${questionnaire}" style="margin-top: 30px;margin-left: 25%">
+    <input type="hidden" th:field="*{id}" th:value="*{id}">
+    <div class="form-row">
+        <div class="form-group col-md-8">
+            <label for="exampleInputUsername"><p class="h6">Your name</p></label>
+            <input type="text" class="form-control" id="exampleInputUsername"
+                   placeholder="Enter Name" minlength="5" maxlength="30" th:name="yourName"
+                   aria-describedby="userHelp">
+        </div>
+    </div>
+    <button type="submit" class="btn start" style="margin-top: 50px;margin-right: 33%"></button>
+</form>
 </body>
 </html>
