--- a/src/main/resources/templates/account-edit-form.html
+++ b/src/main/resources/templates/account-edit-form.html
@@ -12,23 +12,9 @@
         <img th:src="@{/image/registration.png}" class="img-fluid rounded">
     </div>
 </center>
-<form id="form" th:action="@{/user/register}" method="post" th:object="${newAccount}" style="margin-left: 27%">
+<form id="form" th:action="@{/user/edit}" method="post" th:object="${editAccount}" style="margin-left: 27%">
     <div th:if="${errorMessage != null}" class="row col-md-8 form-input-row">
         <div class="col-md-12 alert alert-danger" th:text="${errorMessage}"></div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-4">
-            <label for="exampleInputEmail1"><p class="h6">Username</p></label>
-            <input type="text" class="form-control" id="exampleInputUsername"
-                   placeholder="Enter Username" minlength="5" maxlength="30" th:field="*{username}" aria-describedby="userHelp">
-            <small id="userHelp" class="form-text text-muted">This will be your login.
-            </small>
-        </div>
-        <div class="form-group col-md-4">
-            <label for="exampleInputPassword1"><p class="h6">Password</p></label>
-            <input type="password" class="form-control" minlength="6"  id="exampleInputPassword1" placeholder="Password"
-                   th:field="*{password}">
-        </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-4">
