--- a/src/main/resources/templates/questionnarie-from.html
+++ b/src/main/resources/templates/questionnarie-from.html
@@ -7,12 +7,14 @@
 </head>
 <body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
+
 <center>
     <div class="row col-md-5" style="margin-top: 100px">
         <img th:src="@{/image/newQuestionnaire.png}" class="img-fluid rounded">
     </div>
 </center>
-<form id="form" th:action="@{/questionnaire/create}" method="post" th:object="${questionarry}" style="margin-left: 15%">
+<form id="form" th:action="@{/questionnaire/create}" method="post" th:object="${questionarry}" style="padding-left: 15%">
+    <input type="hidden" th:field="*{id}" th:value="*{id}">
     <div class="form-row col-md-10">
         <div class="form-group col-md-6">
             <label for="exampleInputUsername"><p class="h6">Title</p></label>
@@ -22,19 +24,20 @@
         <div class="form-group col-md-3">
             <label for="exampleInputUsername"><p class="h6">Ending Date</p></label>
             <input type="date" class="form-control" id="exampleDate"
-                   placeholder="Enter Ending Date" th:field="*{endingDate}" aria-describedby="userHelp">
+                   placeholder="Enter Ending Date" th:field="*{endingDate}" th:value="*{endingDate}" aria-describedby="userHelp">
         </div>
         <div class="form-group form-check col-md-3">
-            <input class="form-check-input" type="checkbox" th:default="false" th:field="*{isPrivate}" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" th:default="false" th:field="*{isPrivate}"  id="defaultCheck1">
             <label class="form-check-label" for="defaultCheck1">
                 <p class="h6">Is private</p>
             </label>
         </div>
+
     </div>
     <div class="form-group col-md-10">
         <label for="exampleInputPassword1"><p class="h6">Description</p></label>
         <textarea type="text" class="form-control" minlength="10" id="exampleInputPassword1" placeholder="Description"
-                  th:field="*{description}" rows="3"></textarea>
+                  th:field="*{description}" th:value="*{description}" rows="3"></textarea>
     </div>
     <button type="submit" class="btn sumbit" style="margin-right: 20%"></button>
 </form>
