--- a/src/main/resources/templates/question-list.html
+++ b/src/main/resources/templates/question-list.html
@@ -47,7 +47,7 @@
         <ul class="pagination">
             <li class="page-item" th:if="${questions.getNumber() >0}">
                 <a class="page-link"
-                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()-1}, size=${questions.getSize()})}"
+                   th:href="@{'/question/list/'+${questionnaryID}+'?page='+${(questions.getNumber()-1)}+'&size='+${questions.getSize()}}"
                    aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
@@ -57,19 +57,19 @@
                 th:each="number : ${#numbers.sequence(questions.getNumber()-3, questions.getNumber()-1)}"
                 th:if="${number >=0}">
                 <a class="page-link"
-                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"
+                   th:href="@{'/question/list/'+${questionnaryID}+'?page='+${number}+'&size='+${questions.getSize()}}"
                    th:text="${number + 1}"></a>
             </li>
             <li class="page-item"
                 th:each="number : ${#numbers.sequence(questions.getNumber(), questions.getNumber()+3)}"
                 th:if="${number< questions.getTotalPages()}">
                 <a class="page-link"
-                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"
+                   th:href="@{'/question/list/'+${questionnaryID}+'?page='+${number}+'&size='+${questions.getSize()}}"
                    th:text="${number + 1}"></a>
             </li>
             <li class="page-item" th:if="${questions.getNumber() < questions.getTotalPages()-1}">
                 <a class="page-link"
-                   th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()+1}, size=${questions.getSize()})}">Next</a>
+                   th:href="@{'/question/list/'+${questionnaryID}+'?page='+${(questions.getNumber()+1)}+'&size='+${questions.getSize()}}">Next</a>
             </li>
         </ul>
     </nav>
