--- a/src/main/resources/templates/end-view.html
+++ b/src/main/resources/templates/end-view.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Ending com</title>
@@ -8,22 +8,24 @@
 <body>
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
 <center>
-<img th:src="@{/image/name.png}" class="img-fluid rounded name" style="margin-top: 5%">
-<div class="view overlay">
-    <h1>Thanks for your time.</h1>
+    <img th:src="@{/image/name.png}" class="img-fluid rounded name" style="margin-top: 5%">
+    <div class="view overlay">
+        <img th:src="@{/image/thanks.png}" class="img-fluid animated zoomIn slower delay-1s rounded name"
+             style="margin-bottom: 5%; margin-top: 2%">
 
         <div class="col-md-12 view overlay zoom animated fadeInDown">
             <a th:href="@{/public/listQuestionnaire}">
-                <button  type="button" class="btn btn-primary">Back to Questionnaire List</button>
+                <button type="button" class="btn btn-primary">Back to Questionnaire List</button>
             </a>
         </div>
-    <div class="col-md-12 view overlay zoom animated fadeInDown">
-        <a th:href="@{/}">
-            <button  type="button" class="btn btn-primary">Back to Home Page</button>
-        </a>
-    </div>
+        <h1 th:text="${name}"></h1>
+        <div class="col-md-12 view overlay zoom animated fadeInDown">
+            <a th:href="@{/}">
+                <button type="button" class="btn btn-primary">Back to Home Page</button>
+            </a>
+        </div>
 
-</div>
+    </div>
 </center>
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
 <th:block th:replace="fragments :: scripts" th:remove="tag"/>
