--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -15,7 +15,7 @@
 <body>
 <th:block th:fragment="navigator">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-        <a class="navbar-brand filipNavbar" th:href="@{/}">
+        <a class="navbar-brand filipNavbar overlay zoom" th:href="@{/}">
             <img class="logo" th:src="@{/image/logo.png}"
                  style="margin-left: 1px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
@@ -34,7 +34,7 @@
                         <a class="dropdown-item dropListElement" th:href="@{/logout}"><p class="h6">Logout</p></a>
                     </div>
                 </li>
-                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                <li class="nav-item " sec:authorize="!isAuthenticated()">
                     <a class="nav-link register" role="button" th:href="@{/user/register}"></a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
