--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -8,22 +8,25 @@
 <body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
 <div class="container">
-    <img class="img-fluid" th:src="@{/image/sign.png}" width="340" height="340" style="margin-top: 100px">
-    <form th:action="@{/login}" method="post" class="form-signin">
-        <div class="col-md-5" style="margin-left: 30%">
-            <label for="username" class="sr-only">Username</label>
+    <img class="img-fluid animated fadeInDown" th:src="@{/image/sign.png}" width="300" height="300"
+         style="margin-top: 95px">
+    <form th:action="@{/login}" method="post" class="form-signin col-md-12 animated fadeInDown slow delay-1s"
+          style="margin-top: 3%">
+        <div class="col-md-4 offset-4">
+            <label for="username" class="sr-only"><h5>Username</h5></label>
             <input type="text" id="username" class="form-control" placeholder="Username" th:name="username" required
                    autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
+            <label for="inputPassword" class="sr-only"><h5>Password</h5></label>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" th:name="password"
                    required>
-            <div class="checkbox mb-3">
+            <div class="checkbox mb-3" style="margin-top: 3%">
                 <label>
-                    <input type="checkbox" value="remember-me"> Remember me
+                    <input type="checkbox" value="remember-me" checked>
+                    <h5>Remember me</h5>
                 </label>
             </div>
         </div>
-        <button class="btn  signin" type="submit"></button>
+        <button class="btn animated fadeInDown slower delay-2s signin" type="submit"></button>
     </form>
 </div>
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
