--- a/src/main/resources/templates/questionnaire-list.html
+++ b/src/main/resources/templates/questionnaire-list.html
@@ -7,10 +7,11 @@
 </head>
 <body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
-<h1 class="display-4" style="margin-top:5%; color: #966364">Questionnaire list</h1>
-
-<table class="table table-striped table-dark col-md-10"
-       style="margin-top:1%; margin-left: 10%; background-color: #966364">
+<img class="img-fluid animated fadeInDown" th:src="@{/image/questionnaires.png}" width="500"
+     height="300"
+     style="margin-top: 95px">
+<table class="table table-striped rounded table-dark col-md-10 offset-1 animated fadeInDown slow delay-1s"
+       style="background-color: #966364; margin-top: 2%;">
     <thead>
     <tr>
         <th scope="col">#</th>
@@ -22,51 +23,53 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="quest,index : ${questionnaires}">
+    <tr th:each="quest,index : ${questionnaires}" th:if="${quest.getQuestionSet().size()>1}">
         <!--jezeli ma pytania   -->
         <th scope="row" th:text="1+${index.index}"></th>
         <td th:text="${quest.getTitle()}"></td>
         <td th:text="${quest.getDescription()}"></td>
         <td th:text="${#temporals.format( quest.getAddingDate(),'yyyy-MM-dd HH:mm')}"></td>
         <td th:text="${#temporals.format( quest.getEndingDate(),'yyyy-MM-dd HH:mm')}"></td>
-        <td>
-            <a th:href="@{'/questionnaire/remove/'+${quest.getId()}}" sec:authorize="hasRole('ADMIN')" class="btn btn-del" role="button"></a>
+        <td class="animated fadeInRight slower delay-2s">
             <a th:href="@{'/public/fill/'+${quest.getId()}}" class="btn btn-fil" role="button"></a>
-            <a th:href="@{'/question/list/'+${quest.getId()}}"  class="btn btn-open" role="button"></a>
+            <a sec:authorize="isAuthenticated()" th:if="${account.canOpen(quest)}"
+               th:href="@{'/question/list/'+${quest.getId()}}" class="btn btn-open" role="button"></a>
+            <a th:href="@{'/questionnaire/remove/'+${quest.getId()}}" sec:authorize="isAuthenticated()"
+               th:if="${account.canOpen(quest)}" class="btn btn-del" role="button"></a>
         </td>
     </tbody>
 </table>
 <!--<div class="row col-md-12 justify-content-center">-->
-    <!--<nav aria-label="Page navigation example">-->
-        <!--<ul class="pagination">-->
-            <!--<li class="page-item" th:if="${questions.getNumber() >0}">-->
-                <!--<a class="page-link"-->
-                   <!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()-1}, size=${questions.getSize()})}"-->
-                   <!--aria-label="Previous">-->
-                    <!--<span aria-hidden="true">&laquo;</span>-->
-                    <!--<span class="sr-only">Previous</span>-->
-                <!--</a>-->
-            <!--</li>-->
-            <!--<li class="page-item"-->
-                <!--th:each="number : ${#numbers.sequence(questions.getNumber()-3, questions.getNumber()-1)}"-->
-                <!--th:if="${number >=0}">-->
-                <!--<a class="page-link"-->
-                   <!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"-->
-                   <!--th:text="${number + 1}"></a>-->
-            <!--</li>-->
-            <!--<li class="page-item"-->
-                <!--th:each="number : ${#numbers.sequence(questions.getNumber(), questions.getNumber()+3)}"-->
-                <!--th:if="${number< questions.getTotalPages()}">-->
-                <!--<a class="page-link"-->
-                   <!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"-->
-                   <!--th:text="${number + 1}"></a>-->
-            <!--</li>-->
-            <!--<li class="page-item" th:if="${questions.getNumber() < questions.getTotalPages()-1}">-->
-                <!--<a class="page-link"-->
-                   <!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()+1}, size=${questions.getSize()})}">Next</a>-->
-            <!--</li>-->
-        <!--</ul>-->
-    <!--</nav>-->
+<!--<nav aria-label="Page navigation example">-->
+<!--<ul class="pagination">-->
+<!--<li class="page-item" th:if="${questions.getNumber() >0}">-->
+<!--<a class="page-link"-->
+<!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()-1}, size=${questions.getSize()})}"-->
+<!--aria-label="Previous">-->
+<!--<span aria-hidden="true">&laquo;</span>-->
+<!--<span class="sr-only">Previous</span>-->
+<!--</a>-->
+<!--</li>-->
+<!--<li class="page-item"-->
+<!--th:each="number : ${#numbers.sequence(questions.getNumber()-3, questions.getNumber()-1)}"-->
+<!--th:if="${number >=0}">-->
+<!--<a class="page-link"-->
+<!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"-->
+<!--th:text="${number + 1}"></a>-->
+<!--</li>-->
+<!--<li class="page-item"-->
+<!--th:each="number : ${#numbers.sequence(questions.getNumber(), questions.getNumber()+3)}"-->
+<!--th:if="${number< questions.getTotalPages()}">-->
+<!--<a class="page-link"-->
+<!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${number}, size=${questions.getSize()})}"-->
+<!--th:text="${number + 1}"></a>-->
+<!--</li>-->
+<!--<li class="page-item" th:if="${questions.getNumber() < questions.getTotalPages()-1}">-->
+<!--<a class="page-link"-->
+<!--th:href="@{'/question/list/'+${questionnaryID}+/(page=${questions.getNumber()+1}, size=${questions.getSize()})}">Next</a>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</nav>-->
 <!--</div>-->
 
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
