--- a/src/main/resources/templates/registration-form.html
+++ b/src/main/resources/templates/registration-form.html
@@ -8,55 +8,62 @@
 <body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
 <center>
-    <div class="row col-md-5" style="margin-top: 100px">
-        <img th:src="@{/image/registration.png}" class="img-fluid rounded">
+    <div class="row col-md-5" th:style="${errorMessage != null ? 'margin-top: 70px' : 'margin-top: 100px'}">
+        <img th:src="@{/image/registration.png}" class="img-fluid rounded animated fadeInDown">
     </div>
 </center>
-<form id="form" th:action="@{/user/register}" method="post" th:object="${newAccount}" style="margin-left: 27%">
-    <div th:if="${errorMessage != null}" class="row col-md-8 form-input-row">
-        <div class="col-md-12 alert alert-danger" th:text="${errorMessage}"></div>
+<form id="form" th:action="@{/user/register}" method="post" th:object="${newAccount}"
+      th:class="${errorMessage != null ? 'col-md-12' : 'col-md-12 animated delay-1s fadeInDown slow'}">
+    <div th:if="${errorMessage != null}" class="row col-md-12 form-input-row">
+        <div class="col-md-6 offset-3 alert alert-danger animated bounce infinite slower"
+             th:text="${errorMessage}"></div>
     </div>
-    <div class="form-row">
-        <div class="form-group col-md-4">
+    <div class="form-row col-md-12">
+        <div class="form-group col-md-3 offset-3">
             <label for="exampleInputEmail1"><p class="h6">Username</p></label>
             <input type="text" class="form-control" id="exampleInputUsername"
-                   placeholder="Enter Username" minlength="5" maxlength="30" th:field="*{username}" aria-describedby="userHelp">
+                   placeholder="Enter Username" minlength="5" maxlength="30" th:field="*{username}"
+                   aria-describedby="userHelp">
             <small id="userHelp" class="form-text text-muted">This will be your login.
             </small>
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-3">
             <label for="exampleInputPassword1"><p class="h6">Password</p></label>
-            <input type="password" class="form-control" minlength="6"  id="exampleInputPassword1" placeholder="Password"
+            <input type="password" class="form-control" minlength="6" id="exampleInputPassword1" placeholder="Password"
                    th:field="*{password}">
         </div>
     </div>
-    <div class="form-row">
-        <div class="form-group col-md-4">
+    <div class="form-row col-md-12">
+        <div class="form-group col-md-3 offset-3">
             <label for="exampleInputEmail1"><p class="h6">Email address</p></label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                    placeholder="Enter email" th:field="*{userEmail}">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.
             </small>
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-3">
             <label for="exampleInputEmail1"><p class="h6">Phone Number</p></label>
-            <input type="text" class="form-control" id="phoneNumber"
-                   placeholder="+ 48" th:field="*{phone}">
+            <input type="tel" class="form-control" id="phoneNumber"
+                   placeholder="+ 48" th:value="'+ 48'" th:field="*{phone}">
         </div>
     </div>
-    <div class="form-row">
-        <div class="form-group col-md-4">
+    <div class="form-row col-md-12">
+        <div class="form-group col-md-3 offset-3">
             <label for="exampleInputEmail1"><p class="h6">Name</p></label>
             <input type="text" class="form-control" id="name"
                    placeholder="Enter Name" th:field="*{name}">
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-3">
             <label for="exampleInputEmail1"><p class="h6">Surname</p></label>
             <input type="text" class="form-control" id="surname"
                    placeholder="Enter Surname" th:field="*{surname}">
         </div>
     </div>
-    <button type="submit" class="btn sumbit" style="margin-right: 33%"></button>
+    <div class="col-md-12" th:style="${errorMessage != null ? '' : 'margin-top: 2%'}">
+        <button type="submit"
+                th:class="${errorMessage != null ? 'btn sumbit' : 'btn sumbit animated delay-2s fadeInDown slower'}"
+        ></button>
+    </div>
 </form>
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
 <th:block th:replace="fragments :: scripts" th:remove="tag"/>
