--- a/src/main/resources/templates/question-statistic.html
+++ b/src/main/resources/templates/question-statistic.html
@@ -5,52 +5,54 @@
     <title>Question statistic</title>
     <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-    <script type="text/javascript"  th:src="@{/js/questionScript.js}"></script>
+
 </head>
 <body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
 <script type="text/javascript" th:inline="javascript" >
 
     /*<![CDATA[*/
-    console.log("dupa");
-    var data = /*[[${question.getContent()}]]*/ 'question';
+    //console.log("dupa");
+    const data = /*[[${question.getContent()}]]*/ 'question';
     console.log(data);
     /*]]>*/
 
 </script>
+<script type="text/javascript"  th:src="@{/js/questionScript.js}"></script>
 
 <center>
     <div class="col-md-12 view overlay zoom animated" style="padding-top: 8%" >
-        <canvas id="questionChart" ></canvas>
+        <!--<canvas id="questionChart" ></canvas>-->
+        <canvas id="doughnut-chart" class="chartjs" width="268" height="134" style="display: block; height: 149px; width: 298px;"></canvas>
     </div>
 </center>
 
 
 
 
-<table class="table table-striped table-dark col-md-10" style="margin-top: 10%; margin-left: 10%">
-    <thead>
-    <tr>
-        <th scope="row" colspan="2">Question: </th>
+<!--<table class="table table-striped table-dark col-md-10" style="margin-top: 10%; margin-left: 10%">-->
+    <!--<thead>-->
+    <!--<tr>-->
+        <!--<th scope="row" colspan="2">Question: </th>-->
 
-    </tr>
-    <tr>
+    <!--</tr>-->
+    <!--<tr>-->
 
-        <th scope="row" colspan="2"  th:text="${question.getContent()}"></th>
-    </tr>
-    <tr>
-        <th scope="col">Answers</th>
-        <th scope="col">Count of answer</th>
+        <!--<th scope="row" colspan="2"  th:text="${question.getContent()}"></th>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<th scope="col">Answers</th>-->
+        <!--<th scope="col">Count of answer</th>-->
 
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="answer : ${statMap}">
-        <th scope="row" th:text="${answer.getKey()}"></th>
-        <td th:text="${answer.value}"></td>
+    <!--</tr>-->
+    <!--</thead>-->
+    <!--<tbody>-->
+    <!--<tr th:each="answer : ${statMap}">-->
+        <!--<th scope="row" th:text="${answer.getKey()}"></th>-->
+        <!--<td th:text="${answer.value}"></td>-->
 
-    </tbody>
-</table>
+    <!--</tbody>-->
+<!--</table>-->
 
 
 
