--- a/src/main/resources/templates/question-statistic.html
+++ b/src/main/resources/templates/question-statistic.html
@@ -4,57 +4,34 @@
     <meta charset="UTF-8" http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <title>Question statistic</title>
     <th:block th:replace="fragments :: link-styles" th:remove="tag"/>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+
 
 </head>
 <body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
-<script type="text/javascript" th:inline="javascript" >
 
+<script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
-    //console.log("dupa");
-    const data = /*[[${question.getContent()}]]*/ 'question';
-    console.log(data);
+
+    var question = /*[[${question.getContent()}]]*/ 'question';
+    var statistic = /*[[${statMap}]]*/ null;
+
     /*]]>*/
-
 </script>
-<script type="text/javascript"  th:src="@{/js/questionScript.js}"></script>
-
-<center>
-    <div class="col-md-12 view overlay zoom animated" style="padding-top: 8%" >
-        <!--<canvas id="questionChart" ></canvas>-->
-        <canvas id="doughnut-chart" class="chartjs" width="268" height="134" style="display: block; height: 149px; width: 298px;"></canvas>
+<script type="text/javascript" th:src="@{/js/questionScript.js}"></script>
+<div >
+    <div class="row col-md-8 offset-2" style="padding-top: 5%">
+        <div id="chartContainer"  style="height: 600px; width: 100%;"></div>
     </div>
-</center>
 
+    <div class="row col-md-12">
+        <a th:href="@{${referer}}">
+            <button type="button" class="btn btn-primary">Back</button>
+        </a>
+    </div>
+</div>
 
-
-
-<!--<table class="table table-striped table-dark col-md-10" style="margin-top: 10%; margin-left: 10%">-->
-    <!--<thead>-->
-    <!--<tr>-->
-        <!--<th scope="row" colspan="2">Question: </th>-->
-
-    <!--</tr>-->
-    <!--<tr>-->
-
-        <!--<th scope="row" colspan="2"  th:text="${question.getContent()}"></th>-->
-    <!--</tr>-->
-    <!--<tr>-->
-        <!--<th scope="col">Answers</th>-->
-        <!--<th scope="col">Count of answer</th>-->
-
-    <!--</tr>-->
-    <!--</thead>-->
-    <!--<tbody>-->
-    <!--<tr th:each="answer : ${statMap}">-->
-        <!--<th scope="row" th:text="${answer.getKey()}"></th>-->
-        <!--<td th:text="${answer.value}"></td>-->
-
-    <!--</tbody>-->
-<!--</table>-->
-
-
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
 <th:block th:replace="fragments :: scripts" th:remove="tag"/>
