--- a/src/main/resources/templates/question-form.html
+++ b/src/main/resources/templates/question-form.html
@@ -93,7 +93,7 @@
 <body class="bg">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
 <div class="container" style="margin-top: 7%">
-    <h1 class="display-3 animated fadeInDown" style="color: #966364; margin-left: 20%">Question <span
+    <h1 class="display-3 animated fadeInDown slow" style="color: #966364;">Question <span
             th:text="${data.getCounter()-1}"></span>/<span
             th:text="${data.getQuestionnaireQuestionIdTab().length}"></span></h1>
     <!--<form th:action="@{'/public/answer/'+${data.getQuestionnarieId()}+'/'+${data.getAnonymousUserId()}}" method="post" th:object="${data}">-->
@@ -108,7 +108,7 @@
 
         <div class="row col-md-12 form-input-row">
             <div>
-                <div class="col-md-12 h3" style="color: #33DDFF; margin-top: 10px" th:text=" ${question.getContent()}
+                <div class="col-md-12 h3 container" style="color: #33DDFF; margin-top: 2%" th:text=" ${question.getContent()}
                 ">
                 </div>
             </div>
@@ -119,20 +119,13 @@
                            th:field="*{answerId}"
                            th:value="${answer.getId()}"
                            th:checked="${true}">
-                    <label th:for="${'f-option'+answer.getId()}"
+                    <label class="animated zoomInRight slower" th:for="${'f-option'+answer.getId()}"
                            th:text="${answer.getContent()}">
 
                     </label>
-                    <div class="check"></div>
+                    <div class="check animated fadeInLeft slower delay-1s"></div>
                 </li>
             </ul>
-
-            <!--<div th:each="answer : ${data.getQuestion().getPossibleAnswers()}">-->
-            <!--<input type="radio" th:field="${data.getAnswer().getId()}"-->
-            <!--th:value="${answer.getId()}" />-->
-            <!--<label th:for="${answer.getId()}"-->
-            <!--th:text="${answer.getContent()}"></label>-->
-            <!--</div>-->
 
 
         </div>
