--- a/src/main/resources/templates/question-list.html
+++ b/src/main/resources/templates/question-list.html
@@ -7,11 +7,11 @@
 </head>
 <body class="bg text-center">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
-<div class="row col-md-12" style="margin-top: 10%;">
-    <div class="col-md-8 text-center" >
+<div class="row col-md-12" style="margin-top: 7%;">
+    <div class="col-md-8 text-center animated fadeInUp slow">
         <h1 class="display-4" th:text="${title}" style="color: #966364"></h1>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 animated fadeInDown slow" style="margin-top: 10px">
         <a th:href="@{'/questionnaire/remove/'+${questionnaryID}}">
             <button type="button" class="btn delete"></button>
         </a><a th:href="@{'/questionnaire/edit/'+${questionnaryID}}">
@@ -19,8 +19,8 @@
     </a>
     </div>
 </div>
-<table class="table table-striped table-dark col-md-10"
-       style="margin-top:1%; margin-left: 10%; background-color: #966364">
+<table class="table rounded animated fadeInDown slow table-striped table-dark col-md-10 offset-1"
+       style="margin-top:1%; background-color: #966364">
     <thead>
     <tr>
         <th scope="col">#</th>
@@ -36,7 +36,7 @@
         <td th:text="${question.getContent()}"></td>
         <td th:text="${question.getAllAnswers()}"></td>
         <td th:text="${question.getCorrectAnswers()}"></td>
-        <td>
+        <td class="animated fadeInDown slower delay-2s">
             <a th:href="@{'/question/delete/'+${question.getId()}}" class="btn btn-del" role="button"></a>
             <a th:href="@{'/question/showStats/'+${question.getId()}}" class="btn btn-stats" role="button"></a>
         </td>
@@ -48,42 +48,42 @@
             <li class="page-item" th:if="${questions.getNumber() >0}">
                 <a class="page-link"
                    th:href="@{'/question/list/'+${questionnaryID}+'?page='+${(questions.getNumber()-1)}+'&size='+${questions.getSize()}}"
-                   aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
+                >Previous
                 </a>
             </li>
             <li class="page-item"
                 th:each="number : ${#numbers.sequence(questions.getNumber()-3, questions.getNumber()-1)}"
                 th:if="${number >=0}">
-                <a class="page-link"
+                <a class="page-link h1"
                    th:href="@{'/question/list/'+${questionnaryID}+'?page='+${number}+'&size='+${questions.getSize()}}"
                    th:text="${number + 1}"></a>
             </li>
             <li class="page-item"
                 th:each="number : ${#numbers.sequence(questions.getNumber(), questions.getNumber()+3)}"
                 th:if="${number< questions.getTotalPages()}">
-                <a class="page-link"
+                <a class="page-link h1"
                    th:href="@{'/question/list/'+${questionnaryID}+'?page='+${number}+'&size='+${questions.getSize()}}"
                    th:text="${number + 1}"></a>
             </li>
             <li class="page-item" th:if="${questions.getNumber() < questions.getTotalPages()-1}">
-                <a class="page-link"
+                <a class="page-link h1"
                    th:href="@{'/question/list/'+${questionnaryID}+'?page='+${(questions.getNumber()+1)}+'&size='+${questions.getSize()}}">Next</a>
             </li>
         </ul>
     </nav>
 </div>
-<div class="row" style="margin-left: 75%; margin-bottom: 10%;">
-    <a th:href="@{'/question/add/'+${questionnaryID}}">
-        <button type="button" class="btn addQuestion"></button>
-    </a>
-    <a th:href="@{/questionnaire/list}">
-        <button type="button" class="btn continue"></button>
-    </a>
+<div class="col-md-12 ">
+    <div class="col-md-4 offset-8 animated fadeInUp slow delay-1s">
+        <a th:href="@{'/question/add/'+${questionnaryID}}">
+            <button type="button" class="btn addQuestion"></button>
+        </a>
+    </div>
+    <div th:if="${questionnary.getQuestionSet().size()>0}" class="col-md-4 animated fadeInUp slow offset-8 delay-2s">
+        <a th:href="@{/questionnaire/list}">
+            <button type="button" class="btn continue"></button>
+        </a>
+    </div>
 </div>
-
-
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
 <th:block th:replace="fragments :: scripts" th:remove="tag"/>
 </body>
