--- a/src/main/resources/templates/questionnarie-from.html
+++ b/src/main/resources/templates/questionnarie-from.html
@@ -9,37 +9,49 @@
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
 
 <center>
-    <div class="row col-md-5" style="margin-top: 100px">
-        <img th:src="@{/image/newQuestionnaire.png}" class="img-fluid rounded">
+    <div th:if="${questionarry.getId()== null}" class="row col-md-5" style="margin-top: 5%">
+        <img th:src="@{/image/newQuestionnaire.png}" class="img-fluid rounded animated fadeInDown">
+    </div>
+    <div th:if="${questionarry.getId()!= null}" class="row col-md-5" style="margin-top: 8%">
+        <img th:src="@{/image/editQtionary.png}" class="img-fluid rounded animated fadeInDown">
     </div>
 </center>
-<form id="form" th:action="@{/questionnaire/create}" method="post" th:object="${questionarry}" style="padding-left: 15%">
+<form id="form" th:action="@{/questionnaire/create}" method="post" th:object="${questionarry}"
+      th:class="${errorMessage != null ? 'col-md-12' : 'col-md-12 animated delay-1s fadeInDown slow'}">
     <input type="hidden" th:field="*{id}" th:value="*{id}">
-    <div class="form-row col-md-10">
-        <div class="form-group col-md-6">
+    <div th:if="${errorMessage != null}" class="row col-md-12 form-input-row">
+        <div class="col-md-6 offset-3 alert alert-danger animated bounce infinite slower"
+             th:text="${errorMessage}"></div>
+    </div>
+    <div class="form-row col-md-12">
+        <div class="form-group col-md-6 offset-2">
             <label for="exampleInputUsername"><p class="h6">Title</p></label>
             <input type="text" class="form-control" id="exampleInputUsername"
-                   placeholder="Enter Title" maxlength="50" minlength="5" th:field="*{title}" aria-describedby="userHelp">
+                   placeholder="Enter Title" maxlength="50" minlength="5" th:field="*{title}"
+                   aria-describedby="userHelp">
         </div>
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-2">
             <label for="exampleInputUsername"><p class="h6">Ending Date</p></label>
             <input type="date" class="form-control" id="exampleDate"
-                   placeholder="Enter Ending Date" th:field="*{endingDate}" th:value="*{endingDate}" aria-describedby="userHelp">
+                   placeholder="Enter Ending Date" th:field="*{endingDate}" th:value="*{endingDate}"
+                   aria-describedby="userHelp">
         </div>
-        <div class="form-group form-check col-md-3">
-            <input class="form-check-input" type="checkbox" th:default="false" th:field="*{isPrivate}"  id="defaultCheck1">
-            <label class="form-check-label" for="defaultCheck1">
-                <p class="h6">Is private</p>
-            </label>
-        </div>
-
+        <!--<div class="form-group form-check col-md-1">-->
+        <!--<input class="form-check-input" type="checkbox" th:default="false" th:field="*{isPrivate}"  id="defaultCheck1">-->
+        <!--<label class="form-check-label" for="defaultCheck1">-->
+        <!--<p class="h6">Is private</p>-->
+        <!--</label>-->
+        <!--</div>-->
     </div>
-    <div class="form-group col-md-10">
+    <div class="form-group col-md-8 offset-2">
         <label for="exampleInputPassword1"><p class="h6">Description</p></label>
         <textarea type="text" class="form-control" minlength="10" id="exampleInputPassword1" placeholder="Description"
-                  th:field="*{description}" th:value="*{description}" rows="3"></textarea>
+                  th:field="*{description}" th:value="*{description}" rows="4"></textarea>
     </div>
-    <button type="submit" class="btn sumbit" style="margin-right: 20%"></button>
+    <div class="col-md-12">
+        <button type="submit"
+                th:class="${errorMessage != null ? 'btn sumbit' : 'btn sumbit animated delay-2s fadeInDown slower'}"></button>
+    </div>
 </form>
 <th:block th:replace="fragments :: footer" th:remove="tag"/>
 <th:block th:replace="fragments :: scripts" th:remove="tag"/>
